--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
+    "bs-css-emotion": "1.2.0",
+    "bs-platform": "8.2.0",
+    "react": "16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "reason-react": "0.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn bsb:build && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "bsb": "bsb -w",
+    "bsb:build": "bsb -make-world",
+    "bsb:clean": "bsb -clean"
   },
   "eslintConfig": {
     "extends": "react-app"
