chore: migrating to bs-platform@8.4.2

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -18,7 +18,7 @@
   "suffix": ".bs.js",
   "namespace": true,
   "bs-dependencies": [
-    "reason-react",
+    "@rescript/react",
     "res-logger",
     "bs-css",
     "bs-css-emotion",
