--- a/package.json
+++ b/package.json
@@ -4,19 +4,16 @@
   "private": true,
   "dependencies": {
     "@fdaciuk/use-timer": "0.1.6",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "bs-css-emotion": "1.2.0",
-    "bs-platform": "8.2.0",
+    "bs-css-emotion": "2.4.0",
+    "bs-platform": "8.4.2",
     "bs-webapi": "0.19.1",
     "decco": "^1.3.0",
-    "re-formality": "4.0.0-beta.7",
+    "re-formality": "4.0.0-beta.11",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-text-mask": "5.4.3",
-    "reason-react": "0.9.1",
+    "@rescript/react": "0.10.1",
     "res-logger": "^2.0.0-beta.2"
   },
   "scripts": {
