--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "bs-css-emotion": "2.4.0",
     "bs-platform": "8.4.2",
     "bs-webapi": "0.19.1",
-    "decco": "^1.3.0",
+    "decco": "1.3.0",
     "re-formality": "4.0.0-beta.11",
-    "react": "16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-scripts": "3.4.3",
     "react-text-mask": "5.4.3",
     "@rescript/react": "0.10.1",
-    "res-logger": "^2.0.0-beta.2"
+    "res-logger": "2.0.0-beta.2"
   },
   "scripts": {
     "start": "react-scripts start",
